--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
     <!-- FONT-AWESOME -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- BOOTSTRAP -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     <title>KobraGym</title>
 </head>
 <body>
+  <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-dark">
         <a class="navbar-brand mx-3" href="index.html">KobraGym</a>
-        <button class="navbar-toggler mx-3" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="true" aria-label="Toggle navigation">
+        <button class="navbar-toggler mx-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse mx-3" id="navbarNav">
@@ -37,12 +38,13 @@
               <a class="nav-link" href="membership.html">Membership</a>
             </li>
             <li class="nav-item px-1">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
       </nav>
 
+      <!-- BANNER -->
       <section class="container-fluid banner">
         <div class="row content">
             <h2>3 - 6 - 12 interest-free fees</h2>
@@ -50,6 +52,7 @@
         </div>
       </section>
 
+      <!-- MAIN -->
       <section class="container-fluid">
           <div class="row">
             <div class="col-sm-6 col-xs-12 col-lg-6 sidebar">
@@ -69,7 +72,7 @@
     </section>
 
     <section class="container">
-        <div class="row promotion">
+        <div class="row promotion mt-5">
             <div class="col-sm-4 icons">
                 <p><i class="fas fa-truck"></i> Shipping all over the country</p>  
             </div>
@@ -82,15 +85,11 @@
         </div>
     </section>
 
+    <!-- CAROUSEL -->
     <section class="container-fluid mt-5 carousel">
       <div class="row d-flex justify-content-lg-between">
         <div class="products-banner col-6">
-          <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-            </ol>
+          <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="3000">
                 <img class="d-block w-100" src="img/disc-20.jpg" alt="First slide">
@@ -102,11 +101,11 @@
                 <img class="d-block w-100" src="img/bar.jpg" alt="Third slide">
               </div>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true" style="color: #000;"></span>
               <span class="sr-only">Previous</span>
             </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
               <span class="carousel-control-next-icon" aria-hidden="true" style="color: #000;"></span>
               <span class="sr-only">Next</span>
             </a>
@@ -119,9 +118,10 @@
         </div>
     </section>
 
+    <!-- MEMBER BANNER -->
     <section class="container-fluid d-flex flex-column justify-content-center align-items-center membership-section">
       <h1>Be <span>Member</span> now</h1>
-      <button>Membership</button>
+      <a href="membership.html"><button>Membership</button></a>
     </section>
 
     <section class="container-fluid d-flex flex-wrap justify-content-center align-items-center subscription">
@@ -137,7 +137,7 @@
       </div>
     </section>
     
-
+    <!-- FOOTER -->
     <section class="container-fluid footer">
         <div class="row">
             <p>Copyright © 2021KobraGym. All Rights Reserved</p>
@@ -154,7 +154,5 @@
 
     <!-- BOOTSTRAP SCRIPT -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
 </html>
