--- a/services.html
+++ b/services.html
@@ -11,34 +11,108 @@
     <!-- FONT-AWESOME -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- BOOTSTRAP -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     <title>KobraGym</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand mx-3" href="index.html">KobraGym</a>
-        <button class="navbar-toggler mx-3" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="true" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse mx-3" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item px-1">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item px-1">
-              <a class="nav-link" href="shop.html">Shop</a>
-            </li>
-            <li class="nav-item px-1 active">
-              <a class="nav-link active" href="services.html">Services</a>
-            </li>
-            <li class="nav-item px-1">
-              <a class="nav-link" href="#">Membership</a>
-            </li>
-            <li class="nav-item px-1">
-              <a class="nav-link" href="#">Contact</a>
-            </li>
-          </ul>
+  <!-- NAVBAR -->
+  <nav class="navbar navbar-expand-lg navbar-dark">
+    <a class="navbar-brand mx-3" href="index.html">KobraGym</a>
+    <button class="navbar-toggler mx-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse mx-3" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item px-1">
+          <a class="nav-link" href="index.html">Home</a>
+        </li>
+        <li class="nav-item px-1">
+          <a class="nav-link" href="shop.html">Shop</a>
+        </li>
+        <li class="nav-item active px-1">
+          <a class="nav-link active" href="services.html">Services</a>
+        </li>
+        <li class="nav-item px-1">
+          <a class="nav-link" href="membership.html">Membership</a>
+        </li>
+        <li class="nav-item px-1">
+          <a class="nav-link" href="contact.html">Contact</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+  <!--  BANNER MAIN -->
+  <section class="container-fluid services-banner d-flex justify-content-center align-items-center">
+    <h1>Gym <span>Services</span></h1>
+  </section>
+
+  <section class="container my-5 text-center d-flex flex-column justify-content-center align-items-center">
+    <h2 class="mt-5">With KobraGym each facility offers services unique to the area and needs of its members.</h2>
+    <p class="mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, cupiditate?</p>
+  </section>
+
+  <!-- SERVICES CARDS -->
+  <section class="container-fluid services-card mt-5 mb-5 mx-auto">
+    <div class="row align-items-center justify-content-lg-center">
+      <div class="card col-3 col-lg-3 col-md-6 col-sm-12 mx-5 m-3" style="width: 25rem;">
+        <img src="img/equipment-service.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         </div>
-      </nav>
+      </div>
+      <div class="card col-3 col-lg-3 col-md-6 col-sm-12 mx-5 m-3" style="width: 25rem;">
+        <img src="img/personal-trainers.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+      <div class="card col-3 col-lg-3 col-md-6 col-sm-12 mx-5 m-3" style="width: 25rem;">
+        <img src="img/private-locker-rooms.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+      <div class="card col-3 col-lg-3 col-md-6 col-sm-12 mx-5 m-3" style="width: 25rem;">
+        <img src="img/spa-services.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+      <div class="card col-3 col-lg-3 col-md-6 col-sm-12 mx-5 m-3" style="width: 25rem;">
+        <img src="img/247-access.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+      <div class="card col-3 col-lg-3 col-md-6 col-sm-12 mx-5 m-3" style="width: 25rem;">
+        <img src="img/equipment-service.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+  <!-- FOOTER -->
+  <section class="container-fluid footer">
+    <div class="row">
+        <p>Copyright © 2021KobraGym. All Rights Reserved</p>
+        <div class="social-icons">
+        <ul>
+            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+            <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+        </ul>
+        </div>
+    </div>
+</section>
+
+
+<!-- BOOTSTRAP SCRIPT -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+</body>
+</html>
