Modifique la seccion del membership

--- a/membership.html
+++ b/membership.html
@@ -76,15 +76,53 @@
   </section>
 
   <!-- MEMBER CARDS -->
-  <section class="container member-cards">
-    <h2>Choose the perfect plan for you</h2>
+  <section class="container member-cards my-5">
+    <h2 class="py-5 text-center">Choose the perfect plan for you</h2>
     <div class="row">
-      <div class="card text-center" style="width: 18rem;">
-        <h3>Basic</h3>
+      <div class="card py-3 my-5 mx-5" style="width: 20rem;">
+        <h2 class="pt-5 pb-3 text-center">Basic</h2>
         <div class="card-body">
-          <h5 class="card-title">$9.99</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title text-center m-0 fs-1">$9.99</h5>
+          <p class="text-center mb-1">Per month</p>
+          <p class="text-decoration-line-through text-center fs-4">$13.50</p>
+          <p class="text-center fs-2 text-line">25% OFF</p>
+          <ul class="fs-5 mb-5">
+            <li>24/7 Access</li>
+            <li>Routine</li>
+            <li>Private Locker Rooms</li>
+          </ul>
+          <a href="#" class="buttons text-decoration-none d-flex justify-content-center align-items-center mb-3">Select Plan</a>
+        </div>
+      </div>
+      <div class="card py-3 my-5 mx-5" style="width: 20rem;">
+        <h2 class="pt-5 pb-3 text-center">Standard</h2>
+        <div class="card-body">
+          <h5 class="card-title text-center m-0 fs-1">$17.99</h5>
+          <p class="text-center mb-1">Per month</p>
+          <p class="text-decoration-line-through text-center fs-4">$23.99</p>
+          <p class="text-center fs-2 text-line">25% OFF</p>
+          <ul class="fs-5 mb-5">
+            <li>Basic Plan</li>
+            <li>Nutrition</li>
+            <li>Personal Trainer</li>
+          </ul>
+          <a href="#" class="buttons text-decoration-none d-flex justify-content-center align-items-center mb-3">Select Plan</a>
+        </div>
+      </div>
+      <div class="card py-3 my-5 mx-5" style="width: 20rem;">
+        <h2 class="pt-5 pb-3 text-center">Premium</h2>
+        <div class="card-body">
+          <h5 class="card-title text-center m-0 fs-1">$24.99</h5>
+          <p class="text-center mb-1">Per month</p>
+          <p class="text-decoration-line-through text-center fs-4">$33.50</p>
+          <p class="text-center fs-2 text-line">25% OFF</p>
+          <ul class="fs-5">
+            <li>Basic Plan + Standard Plan</li>
+            <li>Spa Access</li>
+            <li>Shop Discount</li>
+            <li>Group Classes</li>
+          </ul>
+          <a href="#" class="buttons text-decoration-none d-flex justify-content-center align-items-center mb-3">Select Plan</a>
         </div>
       </div>
     </div>
