Ultimos detalles aplicados

--- a/services.html
+++ b/services.html
@@ -47,6 +47,8 @@
     </div>
   </nav>
 
+  <main>
+
   <!--  BANNER MAIN -->
   <section class="container-fluid services-banner d-flex justify-content-center align-items-center">
     <h1>Gym <span>Services</span></h1>
@@ -54,7 +56,7 @@
 
   <section class="container services-top-text my-5 text-center d-flex flex-column justify-content-center align-items-center">
     <h2 class="mt-5">With KobraGym each facility offers services unique to the area and needs of its members.</h2>
-    <p class="fs-5 mb-5">Check all the services that we have in our facilities</p>
+    <p class="fs-5 mb-5">Check all the services that we have in our installations</p>
   </section>
 
   <!-- SERVICES CARDS -->
@@ -64,47 +66,56 @@
         <img src="img/equipment-service.png" class="card-img-top" alt="equipment-service">
         <div class="card-body">
           <h3 class="font-medium">Equipment-Service</h3>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">Each Powerhouse facility offers high quality cardio & strength equipment.</p>
         </div>
       </div>
       <div class="card col-3 col-lg-3 col-md-6 col-sm-12 mx-5 m-3" style="width: 25rem;">
         <img src="img/personal-trainers.png" class="card-img-top" alt="personal-trainers">
         <div class="card-body">
           <h3 class="font-medium">Personal Trainers</h3>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">Maximize your workout potential with the help of our personal trainers.</p>
         </div>
       </div>
       <div class="card col-3 col-lg-3 col-md-6 col-sm-12 mx-5 m-3" style="width: 25rem;">
         <img src="img/private-locker-rooms.png" class="card-img-top" alt="locker-rooms">
         <div class="card-body">
           <h3 class="font-medium">Private Locker Rooms</h3>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">Our locker rooms are equipped to help you be on your way after a workout.</p>
         </div>
       </div>
       <div class="card col-3 col-lg-3 col-md-6 col-sm-12 mx-5 m-3" style="width: 25rem;">
         <img src="img/spa-services.png" class="card-img-top" alt="spa-services">
         <div class="card-body">
           <h3 class="font-medium">Spa Service</h3>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">Relax after an intense workout with any one of our spa services.</p>
         </div>
       </div>
       <div class="card col-3 col-lg-3 col-md-6 col-sm-12 mx-5 m-3" style="width: 25rem;">
         <img src="img/247-access.png" class="card-img-top" alt="247-access">
         <div class="card-body">
           <h3 class="font-medium">24/7 Access</h3>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">Workout when the time is right for you with 24/7 access in our installations.</p>
         </div>
       </div>
       <div class="card col-3 col-lg-3 col-md-6 col-sm-12 mx-5 m-3" style="width: 25rem;">
         <img src="img/group-classes.png" class="card-img-top" alt="group-classes">
         <div class="card-body">
           <h3 class="font-medium">Group Classes</h3>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">We offer classes for yoga, spin, Zumba, Circuit Training, MX4 and more.</p>
         </div>
       </div>
     </div>
   </section>
 
+  <!-- MEMBER PROMOTION -->
+  <section class="container-fluid member-promotion mt-5">
+    <div class="text-center py-5">
+      <h1><span>25% Off</span> Summer</h1>
+      <a href="membership.html"><button class="buttons">Be Member Now!</button></a>
+    </div>
+  </section>
+
+  </main>
 
   <!-- FOOTER -->
   <section class="container-fluid footer">
