--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
       </section>
 
       <!-- MAIN -->
+      <main>
+
       <section class="container-fluid">
           <div class="row">
             <div class="col-sm-6 col-xs-12 col-lg-6 sidebar">
@@ -140,6 +142,8 @@
         <button class="buttons"><i class="fas fa-share"></i></button>
       </div>
     </section>
+
+  </main>
     
     <!-- FOOTER -->
     <section class="container-fluid footer">
