--- a/membership.html
+++ b/membership.html
@@ -57,7 +57,7 @@
     <div class="row">
         <div class="col-12 col-xs-12 col-sm-12 col-md-12 col-lg-6 text-center py-3 join-flex-left">
             <h3>Join Kobra<span>Gym</span> Today!</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur mollitia quisquam obcaecati fugit corrupti natus.</p>
+            <p>At kobragym we give you the chance to take your potential to another level, take a look at our plans.</p>
         </div>
         <div class="col-12 col-xs-12 col-sm-12 col-md-12 col-lg-6 text-center py-3 join-flex-right">
             <h3>Enter your mail and have <span> 25% Off</span> Summer</h3>
